--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -7,6 +7,18 @@
 </head>
 <body>
 <script>
+const pressed = [];
+const secretCode = 'scott';
+
+window.addEventListener('keyup', e => {
+  pressed.push(e.key);
+  if (pressed.length > secretCode.length) {
+    pressed.shift();
+  }
+  if (pressed.join('').includes(secretCode)) {
+    cornify_add();
+  }
+})
 </script>
 </body>
 </html>
